--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.4",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
